<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="#FFFFFF"
    card_view:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5">

        <TextView
            android:id="@+id/tv_medicalCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp" />

        <CheckBox
            android:id="@+id/cb_grandparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/grandparent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/sp_17" />

        <CheckBox
            android:id="@+id/cb_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/sp_17" />

        <CheckBox
            android:id="@+id/cb_sibling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/sibling"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/sp_17" />

        <CheckBox
            android:id="@+id/cb_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/child"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/sp_17" />
    </LinearLayout>
</android.support.v7.widget.CardView>