<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.kinit.e_medicalrecord.Activities.Family_History.Family_History_Form">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_with_backbtn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical">

        <include layout="@layout/progress_bar" />

        <ScrollView
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/dp_5"
                        android:paddingLeft="@dimen/dp_10"
                        android:paddingRight="@dimen/dp_10"
                        android:paddingTop="@dimen/dp_5">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_textInputLayout_margin"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textColorHint="@color/colorPrimaryDark"
                            android:textSize="17sp">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_medicalCondition"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/medical_condition"
                                android:inputType="text|textCapSentences"
                                android:maxLength="50"
                                android:paddingTop="@dimen/dp_3"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                                android:textColor="@color/colorTextPrimary"
                                android:textSize="17sp" />
                        </android.support.design.widget.TextInputLayout>

                        <CheckBox
                            android:id="@+id/cb_grandP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/grandparent"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="@dimen/sp_17" />

                        <CheckBox
                            android:id="@+id/cb_parent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/parent"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="@dimen/sp_17" />

                        <CheckBox
                            android:id="@+id/cb_sibling"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sibling"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="@dimen/sp_17" />

                        <CheckBox
                            android:id="@+id/cb_child"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/child"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="@dimen/sp_17" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardView"
                    android:background="@color/colorAccent"
                    android:padding="12dp"
                    android:text="@string/save"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="#ffffff" />
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
