<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff">

        <TextView
            android:id="@+id/tv_medicalCondition_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:text="Data"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPrimaryDark" />

        <CheckBox
            android:id="@+id/cb_currentlyUse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Currently_Use"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/sp_17" />

        <CheckBox
            android:id="@+id/cb_previouslyUsed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Previously_Used"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/sp_17" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_5">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/Frequency"
                android:inputType="text"
                android:maxLength="255"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextPrimary"
                android:textSize="@dimen/sp_17" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/How_Long"
                android:inputType="number"
                android:maxLength="3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextPrimary"
                android:textSize="@dimen/sp_17" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_stopped"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/If_Stopped"
                android:inputType="number"
                android:maxLength="4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextPrimary"
                android:textSize="@dimen/sp_17" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/colorAccent"
            android:padding="12dp"
            android:text="Save"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>